converted to use database

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="static/styles/main.css">
 
   <title>Queen Inject Efficiency Visualiser</title>
   <meta name="description" content="Queen Inject Efficiency Plotter">
