--- a/templates/analysis.html.j2
+++ b/templates/analysis.html.j2
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="static/styles/main.css">
 
   <title>Queen Inject Efficiency Visualiser</title>
   <meta name="description" content="Queen Inject Efficiency Plotter">
@@ -80,16 +80,7 @@
       "#EDCB96"
     ]
 
-    queryParams = window.location.search
-    nextParamIndex = queryParams.indexOf('&')
-    dataParamValue = nextParamIndex != -1 ? queryParams.substring(6, nextParamIndex) : queryParams.substring(6)
-
-    compressedAndEncodedJsonData = decodeURIComponent(dataParamValue)
-    compressedJsonData = atob(compressedAndEncodedJsonData)
-    decompressedJsonData = pako.inflate(compressedJsonData, {to: "string"})
-    jsonData = decodeURIComponent(escape(decompressedJsonData))
-
-    rawInputData = JSON.parse(jsonData)
+    rawInputData = JSON.parse('{{analysis_data}}')
 
     document.getElementById("replayName").innerHTML = rawInputData.replayName
 
