restyled to match other all inspiration apps

--- a/templates/analysis.html.j2
+++ b/templates/analysis.html.j2
@@ -15,13 +15,17 @@
 
 <body>
 
-  <h1>
+  <div class="header">
+    <img class="logo" src="static/images/allin_official.png" alt="All Inspiration">
+  </div>
+
+  <h2 class="heading">
     Queen Inject Efficiency Visualiser
-  </h1>
+  </h2>
 
-  <div id="replayName" class="tertiary-element"></div>
+  <div class="subheading"><em id="replayName"></em></div>
 
-  <div class="primary-element hidden">
+  <div class="subsubheading hidden">
     <span id="playerName0"></span>
   </div>
 
@@ -29,22 +33,24 @@
     <canvas id="myChart0" width="800" height="600"></canvas>
   </div>
 
-  <div class="secondary-element hidden">
+  <div class="hidden">
     Total Injects Popped:
     <span id="injectPops0" class="value-element"></span>
   </div>
 
-  <div class="secondary-element hidden">
+  <div class="hidden">
     Overall Inject Efficiency:
     <span id="overallInjectEfficiency0" class="value-element"></span>%
   </div>
 
-  <div class="secondary-element hidden">
+  <div class="hidden">
     Inject Efficiency From Completion Of First Queen:
     <span id="injectEfficiencyFromFirstQueenCompleted0" class="value-element"></span>%
   </div>
 
-  <div class="primary-element hidden">
+  <br>
+
+  <div class="subsubheading hidden">
     <span id="playerName1"></span>
   </div>
 
@@ -52,17 +58,17 @@
     <canvas id="myChart1" width="800" height="600"></canvas>
   </div>
 
-  <div class="secondary-element hidden">
+  <div class="hidden">
     Total Injects Popped:
     <span id="injectPops1" class="value-element"></span>
   </div>
 
-  <div class="secondary-element hidden">
+  <div class="hidden">
     Overall Inject Efficiency:
     <span id="overallInjectEfficiency1" class="value-element"></span>%
   </div>
 
-  <div class="secondary-element hidden">
+  <div class="hidden">
     Inject Efficiency From Completion Of First Queen:
     <span id="injectEfficiencyFromFirstQueenCompleted1" class="value-element"></span>%
   </div>
