--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -12,11 +12,15 @@
 
 <body>
 
-  <h1>
-    Queen Inject Efficiency Visualiser
-  </h1>
+  <div class="header">
+    <img class="logo" src="static/images/allin_official.png" alt="All Inspiration">
+  </div>
 
-  <div class="primary-element">
+  <h2 class="heading">
+    Queen Inject Efficiency Visualiser
+  </h2>
+
+  <div>
     Upload a replay to see a visualisation of the Queen injection efficiency of
     the players.
   </div>
